--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,4 @@
-gateway.ip = 192.168.2.81
-#10 days
-token.expiration_time = 86400000
+token.expiration_time = 864000
 #random value
-token.secret = hfgry463hf746hf573ydh475fhy5739000
+token.secret = hfgry463hf746hf573ydh475fhy5739
 login.url.path=/users/login
