--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,7 @@ token.expiration_time = 864000
 #random value
 token.secret = hfgry463hf746hf573ydh475fhy5739
 login.url.path=/users/login
+
+server.port=8888
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
