--- a/application.properties
+++ b/application.properties
@@ -2,5 +2,5 @@
 #random value
 #token.secret = hfgry463hf746hf573ydh475fhy5739
 #login.url.path=/users/login
-
+spring.application.name=config-server
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
