--- a/users-webservice.properties
+++ b/users-webservice.properties
@@ -4,3 +4,7 @@ token.expiration_time = 864000
 token.secret = hfgry463hf746hf573ydh475fhy5739333
 login.url.path=/users/login
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+# Mysql Configuration
+spring.datasource.username=kanouelm
+spring.datasource.password=Azanoune$4
+spring.datasource.url=jdbc:mysql://localhost:3306/photo_app?serverTimezone=Europe/Berlin
