--- a/application.properties
+++ b/application.properties
@@ -4,4 +4,6 @@ token.secret = hfgry463hf746hf573ydh475fhy5739222
 login.url.path=/users/login
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+albums.url=http://ALBUMS-WS/%s/albums
+
 
