Section 24 Microservice Communication : Feign Client -> Handle Response Errors with Feign Error Decoder

--- a/application.properties
+++ b/application.properties
@@ -5,4 +5,6 @@ login.url.path=/users/login
 
 albums.url=http://ALBUMS-WS/users/%s/albums
 
+albums.exceptions.albums-not-found="Users albums not found"
+
 
