--- a/application.properties
+++ b/application.properties
@@ -5,6 +5,6 @@ login.url.path=/users/login
 
 albums.url=http://ALBUMS-WS/users/%s/albums
 
-albums.exceptions.albums-not-found="Users albums not found"
+albums.exceptions.albums-not-found=Users albums not found
 
 
